--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "dependencies": {
     "@types/pg": "^8.15.4",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.14",
+    "prisma": "^6.12.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
