--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "@types/pg": "^8.15.4",
     "pg": "^8.16.3"
   },
